// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rules should find all Dog stuff 1`] = `
Array [
  FileSubject {
    "name": "DogService",
    "path": "C://project/src/service",
  },
  FileSubject {
    "name": "DogController",
    "path": "C://project/src/controller",
  },
  FileSubject {
    "name": "DogModel",
    "path": "C://project/src/model",
  },
]
`;

exports[`Rules should find all Dog things by prefix 1`] = `
Array [
  FileSubject {
    "name": "DogService",
    "path": "C://project/src/service",
  },
  FileSubject {
    "name": "DogController",
    "path": "C://project/src/controller",
  },
  FileSubject {
    "name": "DogModel",
    "path": "C://project/src/model",
  },
]
`;

exports[`Rules should find all Services by file suffix 1`] = `
Array [
  FileSubject {
    "name": "DogService",
    "path": "C://project/src/service",
  },
]
`;

exports[`Rules should find all Services by matching path 1`] = `
Array [
  FileSubject {
    "name": "DogService",
    "path": "C://project/src/service",
  },
]
`;

exports[`Rules should find all Services by suffix 1`] = `
Array [
  FileSubject {
    "name": "DogService",
    "path": "C://project/src/service",
  },
]
`;

exports[`Rules should find all controllers 1`] = `
Array [
  FileSubject {
    "name": "DogController",
    "path": "C://project/src/controller",
  },
  FileSubject {
    "name": "CatController",
    "path": "C://project/src/controller",
  },
]
`;

exports[`Rules should not find all Dog things by suffix 1`] = `Array []`;

exports[`Rules should not find all Services by prefix 1`] = `Array []`;
